@@ -39,6 +39,7 @@ endif::[]
 
 * Fix parsing value of `trace_methods` configuration property {pull}930[#930]
 * Workaround for `java.util.logging` deadlock {pull}965[#965]
+* JMS should propagate traceparent header when transactions are not sampled {pull}999[#999]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
